--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html{
     font-family: 'Open Sans', sans-serif;
 }
 
 body {
-    background-color: #0D2137;
+    background-image: linear-gradient(to left top, #2e77ae, #28608e, #204a70, #173553, #0d2137);
+    height: calc( 100vh - 60px);
 }
 
 .container{
@@ -11,7 +17,7 @@ body {
     border-radius: 24px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     width: 50vw;
-    margin: 0 auto;
+    margin: 60px auto;
     text-align: center;
 }
 
@@ -21,6 +27,10 @@ body {
     border-radius: 24px 24px 0 0;
     color: #fff;
     padding: 16px;
+}
+
+.container__subtitle {
+    margin: 12px;
 }
 
 .container_text {
