--- a/style.css
+++ b/style.css
@@ -9,38 +9,82 @@ html{
 
 body {
     background-image: linear-gradient(to left top, #2e77ae, #28608e, #204a70, #173553, #0d2137);
-    height: calc( 100vh - 60px);
+    height: calc( 100vh - 48px);
+}
+
+.header {
+    background-color: #2E77AE;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    height: 48px;
+    padding: 16px;
+}
+
+.header__title {
+    color: #fff;
+}
+
+main{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    justify-content: center;
+    margin: 16px auto;
+    gap: 24px;
+    width: 70vw;
 }
 
 .container{
     background-color: #fff;
     border-radius: 24px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    width: 50vw;
-    margin: 60px auto;
     text-align: center;
-}
-
-.container__title {
-    background-color: #2E77AE;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    border-radius: 24px 24px 0 0;
-    color: #fff;
     padding: 16px;
-}
-
-.container__subtitle {
-    margin: 12px;
 }
 
 .container_text {
     font-size: 1rem;
-    margin:20px;
     text-align: left;
+    margin-top: 12px;
 }
 
 .container__image {
     border-radius: 12px;
-    margin: 20px;
     width: 300px;
+}
+
+.container.container1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.container.container2 {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.container__image.image1{
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+.container__image.image2{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    text-align: left;
+}
+
+.footer{
+    background-color: #2E77AE;
+    bottom: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+    height: 48px;
+    padding-top: 12px;
+    position: absolute;
+    width: 100%;
+}
+
+.footer__text {
+    text-align: center;
+    color: #fff;
 }
